# llm-wiki

./: .gitignore  LICENSE  pyproject.toml
docs/: llm-wiki-spec.md  prompting-rules.md  task-list.md
docs/skills/: _read-first.md  git-github-workflow-skill.md  linker-skill.md  orchestrator-skill.md  parser-skill.md  updater-skill.md  wiki-writer-skill.md
src/llm_wiki/: __init__.py  models.py  parser.py  parser_models.py  registry.py  storage.py
src/llm_wiki/parsers/: __init__.py  base.py  document.py  notebook.py  repo.py
tests/: test_file_storage.py  test_parser_documents.py  test_parser_notebook_repo.py  test_registry.py
