[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "Source registry and ingestion foundation for LLM-maintained wikis."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "llm-wiki contributors" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
